[package]
name = "viewporter-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ['rt', 'net', 'io-util', 'sync'] }
wayland-client = { version = "0.31" }
wayland-server = { version = "0.31" }
wayland-protocols = { version = "0.31", features = ['unstable', 'client', 'server'] }
wayland-protocols-wlr = { version = "0.2", features = ['client', 'server'] }
