[package]
name = "viewporter-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
rustix = "0.38"
tokio = { version = "1", features = ['rt', 'net'] }
wayland-client = { version = "0.31" }
wayland-protocols = { version = "0.31", features = ['unstable', 'staging', 'client'] }
wayland-protocols-wlr = { version = "0.2", features = ['client'] }
